test/end-to-end/compile-errors/extern-unnecessary-library-name.crow
main void()
	()

f flags libc extern
r record libc extern
u union(x) libc extern
